improvement: 升级到0.1.3，去除不必要的文件

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "iview-extend",
-  "version": "0.1.0",
-  "private": true,
+  "name": "iview-extend-aiback",
+  "version": "0.1.3",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
