--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "iview-extend-aiback",
-  "version": "0.2.7",
+  "name": "iview-extends2",
+  "version": "0.2.8",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
