--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "karma start --single-run"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -15,10 +16,21 @@
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
+    "@vue/eslint-config-airbnb": "^4.0.1",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
+    "chai": "^4.2.0",
     "eslint": "^6.2.2",
     "eslint-plugin-vue": "^5.2.3",
+    "karma": "^4.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^4.0.2",
     "lodash": "^4.17.14",
+    "mocha": "^6.2.0",
     "vue-template-compiler": "^2.6.10"
   },
   "peerDependencies": {
