--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "karma start --single-run"
+    "test": "cross-env BABEL_ENV=test karma start --single-run"
   },
   "dependencies": {
+    "@vue/cli-service": "^3.9.0",
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
     "vue": "^2.6.10"
@@ -15,16 +16,18 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
     "@vue/eslint-config-airbnb": "^4.0.1",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-istanbul": "^5.2.0",
     "chai": "^4.2.0",
+    "cross-env": "^5.2.1",
     "eslint": "^6.2.2",
     "eslint-plugin-vue": "^5.2.3",
     "karma": "^4.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.1",
     "karma-mocha": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.32",
