--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - 10
 install:
-  - yarn add -g codecov
+  - npm install -g codecov
 script:
   - yarn test
   - codecov
