--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-spec-reporter": "^0.0.32",
     "karma-webpack": "^4.0.2",
     "mocha": "^6.2.0",
+    "moment": "^2.24.0",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
