--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^6.2.0",
     "moment": "^2.24.0",
+    "sinon": "^7.4.2",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
