--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cross-env": "^5.2.1",
     "eslint": "^6.2.2",
     "eslint-plugin-vue": "^5.2.3",
+    "flush-promises": "^1.0.2",
     "karma": "^4.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
