--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
     "lodash": "^4.17.14",
+    "mavon-editor": "^2.7.6",
     "vue": "^2.6.10",
     "vue-context": "^4.0.3"
   },
