--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iview-extends2",
-  "version": "1.0.31",
+  "version": "1.0.32",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -14,8 +14,7 @@
     "lodash": "^4.17.14",
     "moment": "^2.24.0",
     "mavon-editor": "^2.7.6",
-    "vue": "^2.6.10",
-    "vue-context": "^4.0.3"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
@@ -39,6 +38,7 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^6.2.0",
     "sinon": "^7.4.2",
+    "vue-context-menu": "^2.0.6",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
